[package]
name = "pypi-search"
version = "0.1.0"
authors = ["Timm Behner <behner@cs.uni-bonn.de>"]
edition = "2018"
license = "GPL-3.0-or-later"
description = "Search the PyPI for packages by name aka `pip search`."
homepage = "https://github.com/tbehner/pypi-search"
repository = "https://github.com/tbehner/pypi-search"
documentation = "https://github.com/tbehner/pypi-search"
readme = "README.md"

[[bin]]
name = "pypi-search"
path = "src/main.rs"
test = false


[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "*"
scraper = "*"
chrono = "0.4"
lazy_static = "1.4"
structopt = "0.3"
clap = "*"
tabled = "*"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false
