[package]
name = "pps"
version = "0.2.0"
authors = ["Timm Behner <behner@cs.uni-bonn.de>"]
edition = "2018"
license = "GPL-3.0-or-later"
description = "Search the PyPI for packages by name aka `pip search`."
homepage = "https://github.com/tbehner/pps"
repository = "https://github.com/tbehner/pps"
documentation = "https://docs.rs/pps/0.1.0/pps/"
readme = "README.md"

[[bin]]
name = "pps"
path = "src/main.rs"
test = false


[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
scraper = "0.12"
chrono = "0.4"
lazy_static = "1.4"
structopt = "0.3"
clap = "2"
tabled = "0.2"
thousands = "0.2.0"
futures = "0.3"
backoff = { version = "0.3.0", features = ["futures", "tokio"]}

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false
